--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -6,6 +6,11 @@ parameters:
 			path: src/Controller/Admin/BackupsController.php
 
 		-
+			message: "#^Ternary operator condition is always true\\.$#"
+			count: 1
+			path: src/Form/BackupForm.php
+
+		-
 			message: "#^Variable \\$backup might not be defined\\.$#"
 			count: 1
 			path: templates/Admin/Backups/add.php
