--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     ],
     "require": {
         "php": ">=7.2",
-        "mirko-pagliai/cakephp-database-backup": "^2.8.3",
-        "mirko-pagliai/me-cms": "dev-develop-ci-actions-no-database-backup as 2.30.3"
+        "mirko-pagliai/cakephp-database-backup": "^2.8.3"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
+        "mirko-pagliai/me-cms": "dev-develop-ci-actions-no-database-backup as 2.30.3",
         "phpunit/phpunit": "^8.5.12|^9.0|^9.5"
     },
     "autoload": {
