--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
     ],
     "require": {
         "php": ">=7.2",
+        "mirko-pagliai/cakephp-assets": "^1.5.7",
         "mirko-pagliai/cakephp-database-backup": "^2.9.1"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
-        "mirko-pagliai/me-cms": "dev-develop-ci-actions-no-database-backup as 2.30.3",
+        "mirko-pagliai/me-cms": "^2.30.4-RC1",
         "phpunit/phpunit": "^8.5.12|^9.0|^9.5"
     },
     "autoload": {
@@ -51,7 +52,7 @@
             "@phpstan",
             "@psalm"
         ],
-        "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan:^0.12 psalm/phar:^3.18 && mv composer.backup composer.json",
+        "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan:^0.12 psalm/phar:\"^3.18|^4\" && mv composer.backup composer.json",
         "update-lowest": "@composer update --prefer-lowest"
     }
 }
