--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,11 @@
     ],
     "require": {
         "php": ">=7.2",
-        "mirko-pagliai/cakephp-assets": "^1.5.7",
-        "mirko-pagliai/cakephp-database-backup": "^2.9.1"
+        "mirko-pagliai/cakephp-database-backup": "^2.9.1",
+        "mirko-pagliai/me-cms": "^2.30.6-RC3"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
-        "mirko-pagliai/me-cms": "^2.30.6-RC3",
         "phpunit/phpunit": "^8.5.14|^9.0|^9.5"
     },
     "autoload": {
