--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,25 +12,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ['7.2', '7.3', '7.4', '8.0']
+        php-version: ['7.4', '8.0', '8.1']
         db-type: [mysql, pgsql]
         prefer-lowest: ['']
-        exclude:
-          - php-version: '7.2'
-            db-type: 'pgsql'
-          - php-version: '7.3'
-            db-type: 'pgsql'
         include:
-          - php-version: '7.2'
-            db-type: 'mysql'
-            prefer-lowest: 'prefer-lowest'
-          - php-version: '7.3'
-            db-type: 'mysql'
-            prefer-lowest: 'prefer-lowest'
           - php-version: '7.4'
             db-type: 'mysql'
             prefer-lowest: 'prefer-lowest'
           - php-version: '8.0'
+            db-type: 'mysql'
+            prefer-lowest: 'prefer-lowest'
+          - php-version: '8.1'
             db-type: 'mysql'
             prefer-lowest: 'prefer-lowest'
 
@@ -88,18 +80,21 @@ jobs:
             if [[ ${{ matrix.db-type }} == 'pgsql' ]]; then export db_dsn='postgres://postgres:postgres@127.0.0.1/test?encoding=utf8&quoteIdentifiers=true'; fi
 
             if [[ ${{ matrix.php-version }} == '8.0' ]]; then
-              export CODECOVERAGE=1 && vendor/bin/phpunit --verbose --coverage-clover=coverage.xml
+             export XDEBUG_MODE=coverage && vendor/bin/phpunit --verbose --coverage-clover=coverage.xml
             else
               vendor/bin/phpunit
             fi
 
         - name: Submit code coverage
           if: matrix.php-version == '8.0'
-          uses: codecov/codecov-action@v1
+          uses: codecov/codecov-action@v2
 
   cs-stan:
     name: Coding Standard & Static Analysis
     runs-on: ubuntu-latest
+
+    env:
+      PHP_VERSION: '8.0'
 
     steps:
         - uses: actions/checkout@v2
@@ -107,7 +102,7 @@ jobs:
         - name: Setup PHP
           uses: shivammathur/setup-php@v2
           with:
-            php-version: '7.4'
+            php-version: ${{ env.PHP_VERSION }}
             coverage: none
             tools: cs2pr
 
@@ -132,7 +127,7 @@ jobs:
 
         - name: Run psalm
           if: success() || failure()
-          run: vendor/bin/psalm.phar --output-format=github
+          run: vendor/bin/psalm.phar --output-format=github --php-version=${{ env.PHP_VERSION }}
 
         - name: Run phpstan
           if: success() || failure()
