--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": ">=7.4",
         "mirko-pagliai/cakephp-database-backup": "^2.9.1",
         "mirko-pagliai/me-cms": "^2.30.6-RC3"
     },
@@ -45,7 +45,7 @@
         "test": "rm -f -r /tmp/cake* && phpunit",
         "coverage": "XDEBUG_MODE=coverage phpunit --coverage-html=coverage",
         "phpstan": "phpstan.phar analyse",
-        "psalm": "psalm.phar",
+        "psalm": "psalm.phar --php-version=8.0",
         "stan": [
             "@stan-setup",
             "@phpstan",
