--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "require": {
         "php": ">=7.4",
         "mirko-pagliai/cakephp-database-backup": "^2.9.1",
-        "mirko-pagliai/me-cms": "dev-develop",
-        "mirko-pagliai/php-tools": "1.6.1"
+        "mirko-pagliai/me-cms": "^2.30.7-RC4",
+        "mirko-pagliai/php-tools": "^1.6.1"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^4.0",
