--- a/phpstan.neon
+++ b/phpstan.neon
@@ -12,6 +12,7 @@ parameters:
 
     bootstrapFiles:
         - tests/bootstrap.php
+        - vendor/mirko-pagliai/me-tools/config/i18n_constants.php
         - vendor/mirko-pagliai/cakephp-thumber/config/bootstrap.php
         - vendor/mirko-pagliai/me-cms/config/bootstrap.php
 
@@ -19,5 +20,5 @@ parameters:
     checkMissingIterableValueType: false
     treatPhpDocTypesAsCertain: false
 
-    excludes_analyse:
+    excludePaths:
         - tests/test_app/
