--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "mirko-pagliai/php-tools": "^1.6.1"
     },
     "require-dev": {
+        "ext-fileinfo": "*",
         "cakephp/cakephp-codesniffer": "^4.0",
         "phpunit/phpunit": "^9.1|^9.5",
         "phpstan/phpstan": "^1.7",
